move one more piece of presentation maker tex to separate template, make tex compile without errors, error handling in presentation maker, delete tex auxiliray files after tex compilation

--- a/Analyse/LaTeX/presentation.tex
+++ b/Analyse/LaTeX/presentation.tex
@@ -88,7 +88,7 @@
     \toprule
     Defect               & \# modules graded C & C (\%$^*$)  \\
     \midrule
-    {PrimaryFailureReason}
+    {PrimaryFailureReason} \\
     \bottomrule
     \end{{tabular}}
     \end{{table}}
